# Qwen3-VL

./: .gitignore
data_analysis/LAION5B_highres/: LAION_HR_ANALYSIS_SUMMARY.md  analyze_laion_hr.py  laion_hr_sample_analysis.csv
qwen-vl-finetune/: pyproject.toml
qwen-vl-finetune/qwenvl/data/: __init__.py  data_processor.py  data_qwen.py  data_qwen_packed.py
qwen-vl-finetune/qwenvl/train/: train_qwen.py  trainer.py
qwen-vl-finetune/scripts/: run_sweep.sh  sft_coco.sh  sft_laion_qwen3_4b.sh
qwen-vl-finetune/tools/: convert_coco_to_qwen.py  download_process_laion.py
